--- a/style.css
+++ b/style.css
@@ -7,7 +7,17 @@
 a {
     text-decoration: none;
     color: #000;
+} 
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
 }
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 #skills ul {
     border: 1px solid #ddd; /* Light gray */
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
@@ -35,4 +45,83 @@ ul li:nth-child(2) { animation-delay: 0.2s; }
 ul li:nth-child(3) { animation-delay: 0.3s; }
 @keyframes fadeIn {
   100% { opacity: 1; }
+}
+
+/* The switch - the box around the slider */
+.switch {
+  font-size: 17px;
+  position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+  display: inline-block;
+  width: 3.5em;
+  height: 2em;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  --background: #28096b;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--background);
+  transition: .5s;
+  border-radius: 30px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1.4em;
+  width: 1.4em;
+  border-radius: 50%;
+  left: 10%;
+  bottom: 15%;
+  box-shadow: inset 8px -4px 0px 0px #fff000;
+  background: var(--background);
+  transition: .5s;
+}
+
+input:checked + .slider {
+  background-color: #522ba7;
+}
+
+input:checked + .slider:before {
+  transform: translateX(100%);
+  box-shadow: inset 15px -4px 0px 15px #fff000;
+}
+body.dark-theme {
+  background-color: #444;
+  color: #000000;
+}
+body.dark-theme a {
+  color: #000000;
+}
+body.dark-theme .bg-light {
+  background-color: #333 !important;
+  color: #000000 !important;
+}
+
+.project-section.dark-theme .bg-light {
+  background-color: #444 !important;
+  color: #000000 !important;
+}
+
+.contact-section.dark-theme .bg-light {
+  background-color: #555 !important;
+  color: #000000 !important;
+}
+.transition {
+  transition: background-color 1s ease-in-out, color 1s ease-in-out;
 }
