--- a/style.css
+++ b/style.css
@@ -1,108 +1,48 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 a {
-    text-decoration: none;
-    color: #000;
-} 
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-}
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+  color: #000;
 }
 
-#skills ul {
-    border: 1px solid #ddd; /* Light gray */
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
-    border-radius: 5px;
-    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-}
-#skills  ul li {
-    display: inline-block;
-    margin: 0.5rem;
-    padding: 0.5rem 1rem;
-    border: 1px solid #007bff; /* Bootstrap primary color */
-    border-radius: 15px;
-    transition: all 0.3s ease;
-    opacity: 0;
-    animation: fadeIn 0.5s ease-in forwards;
-} 
-ul li:hover {
-    color: #007bff;
-    transform: scale(1.1);
-    transition: all 0.3s ease;
-    cursor: default;
-}
-ul li:nth-child(1) { animation-delay: 0.1s; }
-ul li:nth-child(2) { animation-delay: 0.2s; }
-ul li:nth-child(3) { animation-delay: 0.3s; }
-@keyframes fadeIn {
-  100% { opacity: 1; }
+body {
+  background-color: #e6e9ef;
+  margin: 0 15%;
 }
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-  margin-bottom: 20px;
+.hero .hero-text button {
+  background-color: #7889ab;
 }
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-
-/* contact */
-.contact-section {
-  transition: background-color 0.5s ease;
+.hero-image {
+  height: 750px;
+  background-color: #e6e9ef;
+  background-image: url(images/portfolio.jpg);
+  background-size: cover;
+  background-blend-mode: multiply;
 }
 
-.contact-form {
-  padding: 20px;
-  background-color: white;
-  border-radius: 15px;
-  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
+.about-image {
+  height: 900px;
+  background-color: #e6e9ef;
+  background-image: url(images/aboutme.jpg);
+  background-size: cover;
+  background-blend-mode: multiply;
 }
 
-.contact-form:hover {
-  transform: scale(1.05);
-}
-
-.btn-animated {
-  position: relative;
-  overflow: hidden;
-  transition: all 0.3s ease;
-}
-
-.btn-animated::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
+.projects img {
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.1);
-  transform: translateY(100%);
-  transition: transform 0.3s ease;
+  object-fit: cover;
 }
 
-.btn-animated:hover::after {
-  transform: translateY(0);
+.devIcons {
+  font-size: 4rem;
 }
 
-.btn-animated:hover {
-  color: white;
-}
-
-.custom-icon {
-  margin-right: 10px;
+.lineHeight {
+  line-height: 67px;
 }
