--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 #contact button {
   width: 150px;
   height: 60px;
-  border: 3px solid #315cfd;
+  border: 3px solid #687ba1;
   border-radius: 45px;
   transition: all 0.3s;
   cursor: pointer;
@@ -74,7 +74,7 @@ body {
 }
 
 #contact button:hover {
-  background: #315cfd;
+  background: #687ba1;
   color: white;
   font-size: 1.5em;
 }
